# Fossil_woodAI

./: .gitignore  15492.csv  =2  ChercheCercle.R  Connected_cells.py  Custom_Datatset  Fossil_WoodAI.ipynb  Fossil_WoodAI_script.py  README.md  STAGE_M2.Rproj  Script_M2.Rmd  Trach_segmentation_hyperparameters.py  Woodvit.ipynb  bbbb.py  bbbbb.py  bbbbbb.py  bbbbbbbbb.py  cell_file2.py  cell_line_extractor.py  cell_line_extractor2.py  centroids.py  coupe_images  json_to_mask.py  profiler  results.csv  run_segment_fossil.sh  segment_fossil.py  segment_fossil_prompt.py  test.py  test_model_sam2  test_thresholding_model  utils.py
R_Script/: Script_Images.Rmd
Results/: mask_measurements_15492_filtré.csv  mask_measurements_TGV4_filtré.csv  mask_measurements_X200_15485_PB1.tif_final.csv  mask_measurements_X200_15485_PB2.tif_final.csv  mask_measurements_X200_15485_PB3.tif_final.csv  mask_measurements_X200_15485_PB4.tif_final.csv  mask_measurements_X200_15485_PB5.tif_final.csv  mask_measurements_X200_15485_PB6.tif_final.csv  mask_measurements_X200_15492_PB1.tif_filtré.csv  mask_measurements_X200_15492_PB1.tif_final.csv  mask_measurements_X200_15492_PB2.tif_filtré.csv  mask_measurements_X200_15492_PB2.tif_final.csv
Seuillage/: mask_measurements.csv  seuillage_results.csv
eval_results/: sam2_eval_metrics.csv
evaluation/: test_model_sam2.py
inferences/: mask_measurements.csv  metrics.csv
predictions/: HP.csv  iou_results.csv  (+3 more)
src/: Dataloader_segmentation  cell_line_extractor.py  pyproject.toml  segment_fossil.py
src/tests/: test_model_sam2  test_thresholding_model
(+197 files in other folders)
